# ai-hedge-fund

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: backtester.py  llm.py  main.py  paper_trader.py
src/agents/: __init__.py  ackman.py  buffett.py  burry.py  damodaran.py  druckenmiller.py  fisher.py  fundamentals.py  graham.py  growth.py  jhunjhunwala.py  lynch.py  macro_regime.py  munger.py  pabrai.py  portfolio_manager.py  risk_manager.py  sentiment.py  technical.py  valuation.py  wood.py
src/backtest/: __init__.py  engine.py  metrics.py  models.py  portfolio_tracker.py
src/config/: agents.py  settings.py
src/data/: __init__.py  cache.py  models.py  polygon_client.py
src/graph/: __init__.py  workflow.py
src/paper_trading/: runner.py  state.py
tests/: test_agent_llm_mode.py  test_buffett.py  test_engine.py  test_fundamentals.py  test_graham.py  test_growth.py  test_macro_regime.py  test_metrics.py  test_paper_trading.py  test_portfolio_tracker.py  test_risk_manager.py  test_sentiment.py  test_technical.py  test_valuation.py
